--- a/index.html
+++ b/index.html
@@ -367,8 +367,7 @@
                                 <i class='bx bxs-star star__icon' ></i>
                             </div>
                             <div class="testimonials__descripition">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Quidem quo saepe quibusdam nobis quas minima!</p>
+                                <p>Saya sangat senang dengan pengalaman saya di salon ini! Para ahlinya sangat terampil dan ramah. Layanan yang diberikan sangat profesional dan kualitasnya luar biasa. Saya pasti akan kembali lagi!</p>
                             </div>
                         </div>
                     </div>
