--- a/index.html
+++ b/index.html
@@ -385,8 +385,7 @@
                                 <i class='bx bxs-star star__icon' ></i>
                             </div>
                             <div class="testimonials__descripition">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Quidem quo saepe quibusdam nobis quas minima!</p>
+                                <p>Salon ini adalah tempat yang luar biasa untuk merawat diri saya. Saya merasa begitu rileks sejak pertama kali masuk. </p>
                             </div>
                         </div>
                     </div>
@@ -404,8 +403,7 @@
                                 <i class='bx bxs-star star__icon' ></i>
                             </div>
                             <div class="testimonials__descripition">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Quidem quo saepe quibusdam nobis quas minima!</p>
+                                <p>Saya merasa percaya diri dan puas dengan tampilan baru saya. Saya sangat merekomendasikan salon ini!</p>
                             </div>
                         </div>
                     </div>
@@ -423,8 +421,7 @@
                                 <i class='bx bxs-star star__icon' ></i>
                             </div>
                             <div class="testimonials__descripition">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    Quidem quo saepe quibusdam nobis quas minima!</p>
+                                <p>Saya adalah pelanggan setia salon ini selama bertahun-tahun dan saya selalu merasa puas dengan layanannya. Tempat ini memiliki suasana yang menenangkan dan fasilitas yang bersih.</p>
                             </div>
                         </div>
                     </div>
